create sytem and company at startup